.provarCaches/00D6C0000000xA6UAI/objects/redwing__Training_Resource__c.object
<CustomObject>
    <fields>
        <fullName>Dev_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Dev External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Add_training_parameters_to_URL__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enabling this option will pass context parameters to the Resource URL. (e.g. https://someurl.com/?aid=ASSIGNMENT_ID&amp;tid=TPLAN_ID)</inlineHelpText>
        <label>Add training parameters to URL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>redwing__Display_in_Iframe__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enabling this option will load the Resource URL within an iframe instead of a new window</inlineHelpText>
        <label>Display in Iframe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Learning__c</fullName>
        <label>Learning</label>
        <referenceTo>redwing__Learning__c</referenceTo>
        <relationshipLabel>Training Resources</relationshipLabel>
        <relationshipName>Training_Resources</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>redwing__Prevent_completion_on_launch__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Learning objects of type &quot;Resource&quot; are marked as completed on launch by default, enable this option if you want to delegate the completion to the Resource URL</inlineHelpText>
        <label>Delegate assignment completion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Resource_URL__c</fullName>
        <inlineHelpText>URL of the learning resource you would like to use for this learning (e.g. https://someurl.com)</inlineHelpText>
        <label>Resource URL</label>
        <type>Url</type>
    </fields>
    <label>Training Resource</label>
    <nameField>
        <label>Training Resource Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>